--- a/views/login.ejs
+++ b/views/login.ejs
@@ -61,13 +61,13 @@
 </div>
 <!-- ///////////////////////////////// -->
 <h3 id="checker1"> </h3>
-<a href="#" class = 'button-0' onclick="signOut();">Sign out</a>
+<!-- <a href="#" class = 'button-0' onclick="signOut();">Sign out</a> -->
 </div>
 <!-- ////////////////////////////////////////////////// -->
 <div class="ui middle aligned center aligned grid">
   <div class="column">
     <h2 class="ui teal image header">
-      <img src="images/logo2.png" class="image">
+      <!-- <img src="images/logo2.png" class="image"> -->
       <div class="content">
         Competitive Sudoku - Play with Friends!
       </div>
@@ -97,11 +97,11 @@
       New to us? <a href="/signup">Sign Up</a>
     </div>
 
-    <div class="ui message">
+<!--     <div class="ui message">
       Sign in with Google 
       <br> <br>
       <center><div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"><center>
-    </div>
+    </div> -->
   </div>
 </div>
 
