--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,12 +40,12 @@
                                  <h3 class="panel-title">User Statistics</h3>
                               </div>
                               <div class="panel-body">
-                                 <div><%= username %></div>
+                                 <div><%= title %></div>
                                  <span>
-                                    Win: <%= win %> 
+<!--                                     Win: <%= win %> 
                                     Loss: <%= loss %> 
                                     Tie: <%= draw %>
-                                    MMR: <%= MMR %>
+                                    MMR: <%= MMR %> -->
                                  </span>
                               </div>
                            </div>
