--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
    <body>
       <div class="navbar navbar-default navbar-static-top">
          <div class="container">
-            <div class="navbar-header"><button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand" href="#"><span>Interactive Sudoku</span><br><br></a></div>
+            <div class="navbar-header"><button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand" href="#"><span>Sudoku Showdown</span><br><br></a></div>
             <div class="collapse navbar-collapse" id="navbar-ex-collapse">
                <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="#">Home</a></li>
@@ -40,7 +40,7 @@
                                  <h3 class="panel-title">User Statistics</h3>
                               </div>
                               <div class="panel-body">
-                                 <div><%= title %></div>
+                                 <div><%= user %></div>
                               </div>
                            </div>
                         </div>
