--- a/views/home.ejs
+++ b/views/home.ejs
@@ -41,6 +41,10 @@
                               </div>
                               <div class="panel-body">
                                  <div><%= user %></div>
+                                 <div><%= win %></div>
+                                 <div><%= loss %></div>
+                                 <div><%= draw %></div>
+                                 <div><%= MMR %></div>
                               </div>
                            </div>
                         </div>
