--- a/views/home.ejs
+++ b/views/home.ejs
@@ -41,10 +41,10 @@
                               </div>
                               <div class="panel-body">
                                  <div><%= user %></div>
-                                 <div><%= win %></div>
-                                 <div><%= loss %></div>
-                                 <div><%= draw %></div>
-                                 <div><%= MMR %></div>
+                                 <div>Win: <%= win %></div>
+                                 <div>Loss: <%= loss %></div>
+                                 <div>Draw: <%= draw %></div>
+                                 <div>MMR: <%= MMR %></div>
                               </div>
                            </div>
                         </div>
