--- a/views/guestBoard.ejs
+++ b/views/guestBoard.ejs
@@ -177,8 +177,19 @@
         <div class="cell"></div>
       </div>
     </div>
+
+    <div class="legend">
+      <div class="row">
+        <div class="cell">Start</div>
+        <div class="cell">Ready</div>
+      </div>
+    </div>
+
   </div>
 </div>
+
+
+
 <!-- //////////// CHAT BOX //////////////// -->
 <div id="rightSide">
     <div style="height:auto; width:auto">
