--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,8 @@
       <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
       <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
       <link href="../css/home.css" rel="stylesheet" type="text/css">
+      <script type="text/javascript" src="js/home.js"></script>
+
    </head>
    <body>
       <div class="navbar navbar-default navbar-static-top">
