--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Sudoku Showdown</title>
-    <script type="text/javascript" src="js/chat.js"></script>
+    <script type="text/javascript" src="js/home.js"></script>
     <!-- Bootstrap Core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
