--- a/views/home.ejs
+++ b/views/home.ejs
@@ -53,7 +53,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Sudoku Showdown</a>
+                <!-- <a class="navbar-brand" href="index.html">Sudoku Showdown</a> -->
             </div>
             <!-- /.navbar-header -->
 
