--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,6 +12,7 @@
     <title>Sudoku Showdown</title>
 
     <script type="text/javascript" src="js/home.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
 
     <!-- Bootstrap Core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
