--- a/views/home.ejs
+++ b/views/home.ejs
@@ -54,7 +54,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <!-- <a class="navbar-brand" href="index.html">Sudoku Showdown</a> -->
+                <a class="navbar-brand" href="/">Sudoku Showdown</a>
             </div>
             <!-- /.navbar-header -->
 
