--- a/views/home.ejs
+++ b/views/home.ejs
@@ -357,7 +357,7 @@
                             <br>
                         </li>
                         <li>
-                            <button type="button" class="btn btn-primary btn-lg btn-block" id="create" onclick="createRoom()">Create Room!</button>
+                            <button type="button" class="btn btn-primary btn-lg btn-block" id="create">Create Room!</button>
                         </li>
                     </ul>
                 </div>
