--- a/views/home.ejs
+++ b/views/home.ejs
@@ -357,7 +357,7 @@
                             <br>
                         </li>
                         <li>
-                            <a href="/board"><button type="button" class="btn btn-primary btn-lg btn-block" id="createRoom">Create Room!</button></a>
+                            <button type="button" class="btn btn-primary btn-lg btn-block" id="createRoom">Create Room!</button>
                         </li>
                     </ul>
                 </div>
