--- a/views/home.ejs
+++ b/views/home.ejs
@@ -299,19 +299,19 @@
                                         
                                             <ul>
                                                 <li>
-                                                    <span>Wins:</span>
+                                                    <span id='username'>Username: <%= user %></span>
                                                 </li>
                                                 <li>
-                                                    <span>Loses:</span>
+                                                    <span id='win'>Wins: <%= win %></span>
                                                 </li>
                                                 <li>
-                                                    <span>Ties:</span>
+                                                    <span id='draw'>Ties: <%= draw %></span>
                                                 </li>
                                                 <li>
-                                                    <span>Games Played:</span>
+                                                    <span id='loss'>Losses: <%= loss %></span>
                                                 </li>
                                                 <li>
-                                                    <span>Time Spent:</span>
+                                                    <span id='mmr'>MMR: <%= MMR %></span>
                                                 </li>
                                             </ul>
                                             <!-- /.table-responsive -->
