--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,7 +38,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    
+
 </head>
 
 <body>
@@ -334,7 +334,7 @@
                         </li>
                         <li>
                             <span>Board Dimensions</span>
-                            <select class="form-control">
+                            <select class="form-control" id="boardDimension">
                                 <option value="one">9x9</option>
                                 <option value="two">16x16</option>
                                 <option value="three">25x25</option>
@@ -346,7 +346,7 @@
                         </li>
                         <li>
                             <span>Max Players</span>
-                            <select class="form-control">
+                            <select class="form-control" id="playerNumber">
                                 <option value="one">1 Player</option>
                                 <option value="two">2 Players</option>
                                 <option value="three">3 Players</option>
