--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,11 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <title>Sudoku Showdown</title>
-    <script type="text/javascript" src="js/jquery.min.js"></script>
+        <script type="text/javascript" src="js/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="js/home.js"></script>
-    
+
     <!-- Bootstrap Core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -335,10 +336,10 @@
                         <li>
                             <span>Board Dimensions</span>
                             <select class="form-control" id="boardDimension">
-                                <option value="one">9x9</option>
-                                <option value="two">16x16</option>
-                                <option value="three">25x25</option>
-                                <option value="four">Samurai</option>                        
+                                <option value="9x9">9x9</option>
+                                <option value="16x16">16x16</option>
+                                <option value="25x25">25x25</option>
+                                <option value="Samurai">Samurai</option>                        
                             </select>
                         </li>
                         <li>
@@ -347,11 +348,11 @@
                         <li>
                             <span>Max Players</span>
                             <select class="form-control" id="playerNumber">
-                                <option value="one">1 Player</option>
-                                <option value="two">2 Players</option>
-                                <option value="three">3 Players</option>
-                                <option value="four">4 Players</option>
-                                <option value="five">5 Players</option>
+                                <option value="1">1 Player</option>
+                                <option value="2">2 Players</option>
+                                <option value="3">3 Players</option>
+                                <option value="4">4 Players</option>
+                                <option value="5">5 Players</option>
                             </select>
                         </li>
                         <li>
@@ -396,7 +397,7 @@
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
-                            <ul class="timeline">
+                            <ul class="timeline" id="activeRoomsTimeline">
                                 <li>
                                     <!-- <div class="timeline-badge"><i class="fa fa-play-circle"></i>
                                     </div> -->
@@ -404,12 +405,15 @@
                                     <div class="panel panel-primary">
                                         <div class="panel-heading">
                                             <div class="row">
-                                                <div class="col-xs-3">
+                                                <div class="col-xs-4">
                                                     <i class="fa fa-users fa-5x"></i>
                                                 </div>
-                                                <div class="col-xs-9 text-right">
+                                                <div class="col-xs-4 text-center">
+                                                    <div class="huge">9x9</div>
+                                                </div>
+                                                <div class="col-xs-4 text-right">
                                                     <div class="huge">1/2</div>
-                                                    <div>Creator: Gabor the God</div>
+                                                    <div>Creator: Minjae Kwon</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -430,11 +434,14 @@
                                     <div class="panel panel-primary">
                                         <div class="panel-heading">
                                             <div class="row">
-                                                <div class="col-xs-3">
+                                                <div class="col-xs-4">
                                                     <i class="fa fa-users fa-5x"></i>
                                                 </div>
-                                                <div class="col-xs-9 text-right">
-                                                    <div class="huge">2/4</div>
+                                                <div class="col-xs-4 text-center">
+                                                    <div class="huge">16x16</div>
+                                                </div>
+                                                <div class="col-xs-4 text-right">
+                                                    <div class="huge">1/3</div>
                                                     <div>Creator: Jason Thomas</div>
                                                 </div>
                                             </div>
@@ -449,132 +456,7 @@
                                     </div>
                                     <!-- INSERTED CODE -->
                                 </li>
-                                <li>
-                                    <!-- <div class="timeline-badge danger"><i class="fa fa-bomb"></i>
-                                    </div> -->
-                                    <!-- INSERTED CODE -->
-                                    <div class="panel panel-primary">
-                                        <div class="panel-heading">
-                                            <div class="row">
-                                                <div class="col-xs-3">
-                                                    <i class="fa fa-users fa-5x"></i>
-                                                </div>
-                                                <div class="col-xs-9 text-right">
-                                                    <div class="huge">4/5</div>
-                                                    <div>Creator: MumeiLover404</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <a href="#">
-                                            <div class="panel-footer">
-                                                <span class="pull-left">Join Game!</span>
-                                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                                                <div class="clearfix"></div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <!-- INSERTED CODE -->
-                                </li>
-                                <li class="timeline-inverted">
-                                    <!-- INSERTED CODE -->
-                                    <div class="panel panel-primary">
-                                        <div class="panel-heading">
-                                            <div class="row">
-                                                <div class="col-xs-3">
-                                                    <i class="fa fa-users fa-5x"></i>
-                                                </div>
-                                                <div class="col-xs-9 text-right">
-                                                    <div class="huge">2/3</div>
-                                                    <div>Creator: BoannaBlast666</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <a href="#">
-                                            <div class="panel-footer">
-                                                <span class="pull-left">Join Game!</span>
-                                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                                                <div class="clearfix"></div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <!-- INSERTED CODE -->
-                                </li>
-                                <li>
-                                    <!-- <div class="timeline-badge info"><i class="fa fa-save"></i>
-                                    </div> -->
-                                    <!-- INSERTED CODE -->
-                                    <div class="panel panel-primary">
-                                        <div class="panel-heading">
-                                            <div class="row">
-                                                <div class="col-xs-3">
-                                                    <i class="fa fa-users fa-5x"></i>
-                                                </div>
-                                                <div class="col-xs-9 text-right">
-                                                    <div class="huge">1/5</div>
-                                                    <div>Creator: JohnCena</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <a href="#">
-                                            <div class="panel-footer">
-                                                <span class="pull-left">Join Game!</span>
-                                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                                                <div class="clearfix"></div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <!-- INSERTED CODE -->
-                                </li>
-                                <li>
-                                    <!-- INSERTED CODE -->
-                                    <div class="panel panel-primary">
-                                        <div class="panel-heading">
-                                            <div class="row">
-                                                <div class="col-xs-3">
-                                                    <i class="fa fa-users fa-5x"></i>
-                                                </div>
-                                                <div class="col-xs-9 text-right">
-                                                    <div class="huge">1/4</div>
-                                                    <div>Creator: ChuckNorris</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <a href="#">
-                                            <div class="panel-footer">
-                                                <span class="pull-left">Join Game!</span>
-                                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                                                <div class="clearfix"></div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <!-- INSERTED CODE -->
-                                </li>
-                                <li class="timeline-inverted">
-                                    <div class="timeline-badge success"><i class="fa fa-graduation-cap"></i>
-                                    </div>
-                                    <!-- INSERTED CODE -->
-                                    <div class="panel panel-primary">
-                                        <div class="panel-heading">
-                                            <div class="row">
-                                                <div class="col-xs-3">
-                                                    <i class="fa fa-users fa-5x"></i>
-                                                </div>
-                                                <div class="col-xs-9 text-right">
-                                                    <div class="huge">2/4</div>
-                                                    <div>Creator: KappaMonster329</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <a href="#">
-                                            <div class="panel-footer">
-                                                <span class="pull-left">Join Game!</span>
-                                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                                                <div class="clearfix"></div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <!-- INSERTED CODE -->
-                                </li>
+                                
                             </ul>
                         </div>
                         <!-- /.panel-body -->
