--- a/views/index.html
+++ b/views/index.html
@@ -11,24 +11,27 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <title>Sudoku Showdown</title>
+        <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="js/home.js"></script>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- MetisMenu CSS -->
-    <link href="../bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
+    <link href="bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
 
     <!-- Timeline CSS -->
-    <link href="../dist/css/timeline.css" rel="stylesheet">
+    <link href="dist/css/timeline.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
+    <link href="dist/css/sb-admin-2.css" rel="stylesheet">
 
     <!-- Morris Charts CSS -->
-    <link href="../bower_components/morrisjs/morris.css" rel="stylesheet">
+    <link href="bower_components/morrisjs/morris.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -36,13 +39,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script type="text/javascript">
-    function createRoom() {
-        var roomDiv = "<li><div class='panel panel-primary'><div class='panel-heading'><div class='row'><div class='col-xs-4'><i class='fa fa-users fa-5x'></i></div><div class='col-xs-4 text-center'><div class='huge'>"+ $(boardDimension).val() +"</div></div><div class='col-xs-4 text-right'><div class='huge'>1/"+ $(playerNumber).val() +"</div><div>Creator: JohnCena</div></div></div></div><a href='#''><div class='panel-footer'><span class='pull-left'>Join Game!</span><span class='pull-right'><i class='fa fa-arrow-circle-right'></i></span><div class='clearfix'></div></div></a></div></li>";
-        // var roomDiv = "<div>MumeiLover404</div>";
-        $(roomDiv).hide().appendTo("#activeRoomsTimeline").fadeIn(1000);
-    }
-    </script>
+
 </head>
 
 <body>
@@ -58,7 +55,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Sudoku Showdown</a>
+                <a class="navbar-brand" href="/">Sudoku Showdown</a>
             </div>
             <!-- /.navbar-header -->
 
@@ -304,19 +301,19 @@
                                         
                                             <ul>
                                                 <li>
-                                                    <span>Wins:</span>
+                                                    <span id='username'>Username: <%= user %></span>
                                                 </li>
                                                 <li>
-                                                    <span>Loses:</span>
+                                                    <span id='win'>Wins: <%= win %></span>
                                                 </li>
                                                 <li>
-                                                    <span>Ties:</span>
+                                                    <span id='draw'>Ties: <%= draw %></span>
                                                 </li>
                                                 <li>
-                                                    <span>Games Played:</span>
+                                                    <span id='loss'>Losses: <%= loss %></span>
                                                 </li>
                                                 <li>
-                                                    <span>Time Spent:</span>
+                                                    <span id='mmr'>MMR: <%= MMR %></span>
                                                 </li>
                                             </ul>
                                             <!-- /.table-responsive -->
@@ -362,7 +359,7 @@
                             <br>
                         </li>
                         <li>
-                            <button type="button" class="btn btn-primary btn-lg btn-block" onclick ="createRoom()">Create Room!</button>
+                            <button type="button" class="btn btn-primary btn-lg btn-block" id="createRoom">Create Room!</button>
                         </li>
                     </ul>
                 </div>
@@ -658,21 +655,21 @@
     <!-- /#wrapper -->
 
     <!-- jQuery -->
-    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- Metis Menu Plugin JavaScript -->
-    <script src="../bower_components/metisMenu/dist/metisMenu.min.js"></script>
+    <script src="bower_components/metisMenu/dist/metisMenu.min.js"></script>
 
     <!-- Morris Charts JavaScript -->
-    <script src="../bower_components/raphael/raphael-min.js"></script>
+    <script src="bower_components/raphael/raphael-min.js"></script>
    <!--  <script src="../bower_components/morrisjs/morris.min.js"></script> -->
     <!-- <script src="../js/morris-data.js"></script> -->
 
     <!-- Custom Theme JavaScript -->
-    <script src="../dist/js/sb-admin-2.js"></script>
+    <script src="dist/js/sb-admin-2.js"></script>
 
 </body>
 
