--- a/views/home.ejs
+++ b/views/home.ejs
@@ -417,7 +417,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <a href="#">
+                                        <a href="/board">
                                             <div class="panel-footer">
                                                 <span class="pull-left">Join Game!</span>
                                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
