--- a/views/guestBoard.ejs
+++ b/views/guestBoard.ejs
@@ -180,8 +180,8 @@
 
     <div class="legend">
       <div class="row">
-        <div class="cell">Start</div>
-        <div class="cell">Ready</div>
+        <div class="cell" id='startButton'>Start</div>
+        <div class="cell" id='readyButton'>Ready</div>
       </div>
     </div>
 
